--- a/dir/languages/css/animation/css-animations-series/_project/src/sass/style.scss
+++ b/dir/languages/css/animation/css-animations-series/_project/src/sass/style.scss
@@ -2,5 +2,8 @@
 @import "variables";
 @import "mixins";
 
-@import "transition";
+
+@import "sec-transition";
+@import "sec-keyframes";
+
 @import "keyframes";
