--- a/dir/languages/css/animation/css-animations-series/_project/public/css/style.css
+++ b/dir/languages/css/animation/css-animations-series/_project/public/css/style.css
@@ -31,11 +31,12 @@ TRANSITIONS
     position: relative;
     text-align: center; }
     #transitions li span {
-      position: absolute;
+      border-top-style: solid;
+      height: 100%;
       left: 0;
       pointer-events: none;
+      position: absolute;
       top: 0;
-      height: 100%;
       width: 100%; }
   #transitions .trnstn-container:hover #trnstn-element-01 {
     transform: translate(200px, 100px) rotate(10deg); }
@@ -79,17 +80,44 @@ KEYFRAMES AND Animations
     position: relative;
     text-align: center; }
     #keyframes li span {
-      position: absolute;
+      border-top-style: solid;
+      height: 100%;
       left: 0;
       pointer-events: none;
+      position: absolute;
       top: 0;
-      height: 100%;
       width: 100%; }
     #keyframes li #kyfrm-element-01 {
-      background-color: #ffa3fb; }
+      background-color: #ffa3fb;
+      animation: kyfrmElement01 500ms ease-in-out 0s infinite; }
     #keyframes li #kyfrm-element-02 {
-      background-color: #6cffd8; }
+      background-color: #6cffd8;
+      animation: kyfrmElement02 500ms ease-in-out 0s infinite; }
     #keyframes li #kyfrm-element-03 {
       background-color: #a3beff; }
     #keyframes li #kyfrm-element-04 {
       background-color: #ffe8a3; }
+
+/*
+KEYRAMES EXAMPLE
+*/
+@keyframes kyfrmElement01 {
+  from {
+    border-top-width: 0px;
+    background-color: #ffa3fb; }
+  to {
+    border-top-width: 5px;
+    background-color: rgba(255, 163, 251, 0); } }
+
+@keyframes kyfrmElement02 {
+  0% {
+    border-top-color: #FF0000;
+    border-top-width: 0px;
+    background-color: #6cffd8; }
+  30%, 75% {
+    border-top-width: 5px;
+    background-color: rgba(255, 163, 251, 0.75); }
+  100% {
+    border-top-color: #FF0000;
+    border-top-width: 1px;
+    background-color: rgba(255, 163, 251, 0); } }
