--- a/dir/languages/css/animation/css-animations-series/_project/views/partials/keyframes.pug
+++ b/dir/languages/css/animation/css-animations-series/_project/views/partials/keyframes.pug
@@ -13,3 +13,4 @@ ul(id="keyframes")
 
   li(class="kyfrm-container")
     span(id="kyfrm-element-04") Element 4
+      a(id="kyfrm-anchor-04") Pause Animation
