--- a/dir/languages/css/animation/css-animations-series/_project/public/css/style.css
+++ b/dir/languages/css/animation/css-animations-series/_project/public/css/style.css
@@ -34,7 +34,6 @@ TRANSITIONS
       border-top-style: solid;
       height: 100%;
       left: 0;
-      pointer-events: none;
       position: absolute;
       top: 0;
       width: 100%; }
@@ -83,7 +82,6 @@ KEYFRAMES AND Animations
       border-top-style: solid;
       height: 100%;
       left: 0;
-      pointer-events: none;
       position: absolute;
       top: 0;
       width: 100%; }
@@ -94,9 +92,88 @@ KEYFRAMES AND Animations
       background-color: #6cffd8;
       animation: kyfrmElement02 500ms ease-in-out 0s infinite; }
     #keyframes li #kyfrm-element-03 {
+      /* Default */
+      animation-name: kyfrmElement02;
+      animation-duration: 500ms;
+      animation-timing-function: ease-in-out;
+      animation-delay: 0s;
+      animation-iteration-count: 3;
+      animation-direction: normal;
+      animation-fill-mode: normal;
+      animation-play-state: running;
+      /* WebKit */
+      -webkit-animation-name: kyfrmElement02;
+      -webkit-animation-duration: 500ms;
+      -webkit-animation-timing-function: ease-in-out;
+      -webkit-animation-delay: 0s;
+      -webkit-animation-iteration-count: 3;
+      -webkit-animation-direction: normal;
+      -webkit-animation-fill-mode: normal;
+      -webkit-animation-play-state: running;
+      /* Mozilla */
+      -moz-animation-name: kyfrmElement02;
+      -moz-animation-duration: 500ms;
+      -moz-animation-timing-function: ease-in-out;
+      -moz-animation-delay: 0s;
+      -moz-animation-iteration-count: 3;
+      -moz-animation-direction: normal;
+      -moz-animation-fill-mode: normal;
+      -moz-animation-play-state: running;
+      /* Opera */
+      -o-animation-name: kyfrmElement02;
+      -o-animation-duration: 500ms;
+      -o-animation-timing-function: ease-in-out;
+      -o-animation-delay: 0s;
+      -o-animation-iteration-count: 3;
+      -o-animation-direction: normal;
+      -o-animation-fill-mode: normal;
+      -o-animation-play-state: running;
       background-color: #a3beff; }
     #keyframes li #kyfrm-element-04 {
+      /* Default */
+      animation-name: kyfrmElement02;
+      animation-duration: 500ms;
+      animation-timing-function: ease-in-out;
+      animation-delay: 0s;
+      animation-iteration-count: infinite;
+      animation-direction: normal;
+      animation-fill-mode: normal;
+      /* WebKit */
+      -webkit-animation-name: kyfrmElement02;
+      -webkit-animation-duration: 500ms;
+      -webkit-animation-timing-function: ease-in-out;
+      -webkit-animation-delay: 0s;
+      -webkit-animation-iteration-count: infinite;
+      -webkit-animation-direction: normal;
+      -webkit-animation-fill-mode: normal;
+      /* Mozilla */
+      -moz-animation-name: kyfrmElement02;
+      -moz-animation-duration: 500ms;
+      -moz-animation-timing-function: ease-in-out;
+      -moz-animation-delay: 0s;
+      -moz-animation-iteration-count: infinite;
+      -moz-animation-direction: normal;
+      -moz-animation-fill-mode: normal;
+      /* Opera */
+      -o-animation-name: kyfrmElement02;
+      -o-animation-duration: 500ms;
+      -o-animation-timing-function: ease-in-out;
+      -o-animation-delay: 0s;
+      -o-animation-iteration-count: infinite;
+      -o-animation-direction: normal;
+      -o-animation-fill-mode: normal;
       background-color: #ffe8a3; }
+      #keyframes li #kyfrm-element-04 #kyfrm-anchor-04 {
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        z-index: 10;
+        width: 100%;
+        background-color: #868e96;
+        color: #FFFFFF; }
+  #keyframes .is-paused {
+    background-color: #000000;
+    animation-play-state: paused; }
 
 /*
 KEYRAMES EXAMPLE
@@ -110,6 +187,19 @@ KEYRAMES EXAMPLE
     background-color: rgba(255, 163, 251, 0); } }
 
 @keyframes kyfrmElement02 {
+  0% {
+    border-top-color: #FF0000;
+    border-top-width: 0px;
+    background-color: #6cffd8; }
+  30%, 75% {
+    border-top-width: 5px;
+    background-color: rgba(255, 163, 251, 0.75); }
+  100% {
+    border-top-color: #FF0000;
+    border-top-width: 1px;
+    background-color: rgba(255, 163, 251, 0); } }
+
+@keyframes kyfrmElement03 {
   0% {
     border-top-color: #FF0000;
     border-top-width: 0px;
