--- a/dir/languages/css/animation/css-animations-series/_project/src/sass/_keyframes.scss
+++ b/dir/languages/css/animation/css-animations-series/_project/src/sass/_keyframes.scss
@@ -54,3 +54,15 @@ KEYRAMES EXAMPLE
     background-color: rgba(255, 163, 251, 0);
   }
 }
+
+@keyframes gridItem {
+  0% {
+    background-color: #a8ffd0;
+    height: 0px;
+  }
+
+  100% {
+    background-color: #a8ffd0;
+    height: 130px;
+  }
+}
