--- a/dir/languages/css/animation/css-animations-series/_project/src/sass/_mixins.scss
+++ b/dir/languages/css/animation/css-animations-series/_project/src/sass/_mixins.scss
@@ -5,3 +5,17 @@ h1 {
   color: $color ;
   @include h1-defaults;
 }
+
+#footer {
+  @include footer;
+}
+
+@for $i from 1 through 15 {
+  .test {
+    &:nth-child(#{$i}) {
+      &:after {
+        content: "#{$i}"
+      }
+    }
+  }
+}
