--- a/dir/languages/css/animation/css-animations-series/_project/src/sass/mixins/_theme-default.scss
+++ b/dir/languages/css/animation/css-animations-series/_project/src/sass/mixins/_theme-default.scss
@@ -85,3 +85,9 @@
   -o-animation-fill-mode: $fill;
   -o-animation-play-state: $state;
 }
+
+@mixin footer {
+  background-color: #564343;
+  color: #FFFFFF;
+  padding: 10px 0;
+}
