--- a/dir/languages/css/animation/css-animations-series/_project/views/partials/drop-down.pug
+++ b/dir/languages/css/animation/css-animations-series/_project/views/partials/drop-down.pug
@@ -4,7 +4,7 @@ nav: ul
   - var i = 0;
     while (i++ < 4)
       li style #{i}
-        ul(class="drop-menu menu-#{i}")
+        ul(class="drop-menu menu-"+i)
           li uno
           li dos
           li tres
