--- a/dir/languages/css/animation/css-animations-series/_project/src/sass/_keyframes.scss
+++ b/dir/languages/css/animation/css-animations-series/_project/src/sass/_keyframes.scss
@@ -66,3 +66,17 @@ KEYRAMES EXAMPLE
     height: 130px;
   }
 }
+
+
+
+// DROP DOWN MENU
+@keyframes menu1 {
+  0% {
+    opacity: 0;
+    transform: rotateY(-90deg) translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: rotateY(0deg) translateY(0px);
+  }
+}
