--- a/dir/languages/css/animation/css-animations-series/_project/public/css/style.css
+++ b/dir/languages/css/animation/css-animations-series/_project/public/css/style.css
@@ -469,6 +469,160 @@ li:hover > ul.drop-menu.menu-1 li {
     -o-animation-delay: 600ms;
     -o-animation-fill-mode: forwards; }
 
+li:hover > ul.drop-menu.menu-2 li {
+  opacity: 0;
+  transform-origin: top center; }
+  li:hover > ul.drop-menu.menu-2 li:nth-child(1) {
+    /* Default */
+    animation-name: menu2;
+    animation-duration: 300ms;
+    animation-timing-function: ease-in-out;
+    animation-delay: -150ms;
+    animation-fill-mode: forwards;
+    /* WebKit */
+    -webkit-animation-name: menu2;
+    -webkit-animation-duration: 300ms;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-delay: -150ms;
+    -webkit-animation-fill-mode: forwards;
+    /* Mozilla */
+    -moz-animation-name: menu2;
+    -moz-animation-duration: 300ms;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-delay: -150ms;
+    -moz-animation-fill-mode: forwards;
+    /* Opera */
+    -o-animation-name: menu2;
+    -o-animation-duration: 300ms;
+    -o-animation-timing-function: ease-in-out;
+    -o-animation-delay: -150ms;
+    -o-animation-fill-mode: forwards; }
+  li:hover > ul.drop-menu.menu-2 li:nth-child(2) {
+    /* Default */
+    animation-name: menu2;
+    animation-duration: 600ms;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0ms;
+    animation-fill-mode: forwards;
+    /* WebKit */
+    -webkit-animation-name: menu2;
+    -webkit-animation-duration: 600ms;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-delay: 0ms;
+    -webkit-animation-fill-mode: forwards;
+    /* Mozilla */
+    -moz-animation-name: menu2;
+    -moz-animation-duration: 600ms;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-delay: 0ms;
+    -moz-animation-fill-mode: forwards;
+    /* Opera */
+    -o-animation-name: menu2;
+    -o-animation-duration: 600ms;
+    -o-animation-timing-function: ease-in-out;
+    -o-animation-delay: 0ms;
+    -o-animation-fill-mode: forwards; }
+  li:hover > ul.drop-menu.menu-2 li:nth-child(3) {
+    /* Default */
+    animation-name: menu2;
+    animation-duration: 900ms;
+    animation-timing-function: ease-in-out;
+    animation-delay: 150ms;
+    animation-fill-mode: forwards;
+    /* WebKit */
+    -webkit-animation-name: menu2;
+    -webkit-animation-duration: 900ms;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-delay: 150ms;
+    -webkit-animation-fill-mode: forwards;
+    /* Mozilla */
+    -moz-animation-name: menu2;
+    -moz-animation-duration: 900ms;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-delay: 150ms;
+    -moz-animation-fill-mode: forwards;
+    /* Opera */
+    -o-animation-name: menu2;
+    -o-animation-duration: 900ms;
+    -o-animation-timing-function: ease-in-out;
+    -o-animation-delay: 150ms;
+    -o-animation-fill-mode: forwards; }
+  li:hover > ul.drop-menu.menu-2 li:nth-child(4) {
+    /* Default */
+    animation-name: menu2;
+    animation-duration: 1200ms;
+    animation-timing-function: ease-in-out;
+    animation-delay: 300ms;
+    animation-fill-mode: forwards;
+    /* WebKit */
+    -webkit-animation-name: menu2;
+    -webkit-animation-duration: 1200ms;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-delay: 300ms;
+    -webkit-animation-fill-mode: forwards;
+    /* Mozilla */
+    -moz-animation-name: menu2;
+    -moz-animation-duration: 1200ms;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-delay: 300ms;
+    -moz-animation-fill-mode: forwards;
+    /* Opera */
+    -o-animation-name: menu2;
+    -o-animation-duration: 1200ms;
+    -o-animation-timing-function: ease-in-out;
+    -o-animation-delay: 300ms;
+    -o-animation-fill-mode: forwards; }
+  li:hover > ul.drop-menu.menu-2 li:nth-child(5) {
+    /* Default */
+    animation-name: menu2;
+    animation-duration: 1500ms;
+    animation-timing-function: ease-in-out;
+    animation-delay: 450ms;
+    animation-fill-mode: forwards;
+    /* WebKit */
+    -webkit-animation-name: menu2;
+    -webkit-animation-duration: 1500ms;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-delay: 450ms;
+    -webkit-animation-fill-mode: forwards;
+    /* Mozilla */
+    -moz-animation-name: menu2;
+    -moz-animation-duration: 1500ms;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-delay: 450ms;
+    -moz-animation-fill-mode: forwards;
+    /* Opera */
+    -o-animation-name: menu2;
+    -o-animation-duration: 1500ms;
+    -o-animation-timing-function: ease-in-out;
+    -o-animation-delay: 450ms;
+    -o-animation-fill-mode: forwards; }
+  li:hover > ul.drop-menu.menu-2 li:nth-child(6) {
+    /* Default */
+    animation-name: menu2;
+    animation-duration: 1800ms;
+    animation-timing-function: ease-in-out;
+    animation-delay: 600ms;
+    animation-fill-mode: forwards;
+    /* WebKit */
+    -webkit-animation-name: menu2;
+    -webkit-animation-duration: 1800ms;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-delay: 600ms;
+    -webkit-animation-fill-mode: forwards;
+    /* Mozilla */
+    -moz-animation-name: menu2;
+    -moz-animation-duration: 1800ms;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-delay: 600ms;
+    -moz-animation-fill-mode: forwards;
+    /* Opera */
+    -o-animation-name: menu2;
+    -o-animation-duration: 1800ms;
+    -o-animation-timing-function: ease-in-out;
+    -o-animation-delay: 600ms;
+    -o-animation-fill-mode: forwards; }
+
 /*
 KEYRAMES EXAMPLE
 */
@@ -521,3 +675,13 @@ KEYRAMES EXAMPLE
   100% {
     opacity: 1;
     transform: rotateY(0deg) translateY(0px); } }
+
+@keyframes menu2 {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg); }
+  60% {
+    transform: rotateX(50deg); }
+  100% {
+    opacity: 1;
+    transform: rotateX(0deg); } }
