--- a/dir/languages/css/animation/css-animations-series/_project/src/sass/_keyframes.scss
+++ b/dir/languages/css/animation/css-animations-series/_project/src/sass/_keyframes.scss
@@ -80,3 +80,17 @@ KEYRAMES EXAMPLE
     transform: rotateY(0deg) translateY(0px);
   }
 }
+
+@keyframes menu2 {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg);
+  }
+  60% {
+    transform: rotateX(50deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
+}
