--- a/dir/languages/javascript/ecmascript/es2015-javascript-to-come/_project/views/partials/head.pug
+++ b/dir/languages/javascript/ecmascript/es2015-javascript-to-come/_project/views/partials/head.pug
@@ -27,6 +27,7 @@ head
 
   // CSS - THIRD PARTY
   link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto")
+  link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323")
   link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
   link(rel="stylesheet" href="scripts/bootstrap/dist/css/bootstrap.min.css")
 
