--- a/dir/languages/javascript/ecmascript/es2015-javascript-to-come/_project/views/index.pug
+++ b/dir/languages/javascript/ecmascript/es2015-javascript-to-come/_project/views/index.pug
@@ -3,3 +3,5 @@ extends ./layouts/default.pug
 block content
 
   include ./chapters/arrays/01_array.pug
+
+  include ./chapters/arrays/02_destructuring.pug
