--- a/dir/languages/javascript/ecmascript/es2015-javascript-to-come/_project/public/css/style.css
+++ b/dir/languages/javascript/ecmascript/es2015-javascript-to-come/_project/public/css/style.css
@@ -1,8 +1,12 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+/* BASE */
+h1 {
+  color: #FF0000;
+  background-color: rgba(255, 0, 0, 0.2);
+  border-bottom: 1px solid #FF0000;
+  display: block;
+  width: 100%;
+  z-index: 100; }
 
-a {
-  color: #00B7FF;
-}
+.tab-pane {
+  background-color: rgba(245, 245, 245, 0.3);
+  padding: 15px; }
