--- a/dir/languages/javascript/ecmascript/es2015-javascript-to-come/_project/views/layouts/default.pug
+++ b/dir/languages/javascript/ecmascript/es2015-javascript-to-come/_project/views/layouts/default.pug
@@ -7,5 +7,11 @@ html
   body
 
     .container
-    
+
       block content
+
+  //- SCRIPTS - THIRD PARTY
+  script(src="scripts/jquery/dist/jquery.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous")
+  script(src="scripts/bootstrap/dist/js/bootstrap.min.js")
+  script(src='js/main.js')
